--- a/task5/package.json
+++ b/task5/package.json
@@ -23,5 +23,12 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3"
-  }
+  },
+  "browserslist": [
+    "chrome >= 126",
+    "firefox >= 127",
+    "opera >= 111",
+    "not dead",
+    "not op_mini all"
+  ]
 }
