--- a/task5/package.json
+++ b/task5/package.json
@@ -17,12 +17,13 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "eslint-config-next": "15.0.3",
+    "simple-git-hooks": "^2.11.1",
+    "typescript": "^5"
   },
   "browserslist": [
     "chrome >= 126",
@@ -30,5 +31,8 @@
     "opera >= 111",
     "not dead",
     "not op_mini all"
-  ]
+  ],
+  "simple-git-hooks": {
+    "prepare-commit-msg": "node ./task5/.gitlint.config.js"
+  }
 }
