--- a/task5/package.json
+++ b/task5/package.json
@@ -1,46 +1,42 @@
 {
-  "name": "task5",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
-    "next": "14.2.18",
-    "react": "18.3.1",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.53.2",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-<<<<<<<<< Temporary merge branch 1
-    "postcss": "^8.4.49",
-    "sass": "^1.81.0",
-    "tailwindcss": "^3.4.15",
-    "typescript": "^5"
-=========
-    "simple-git-hooks": "^2.11.1",
-    "typescript": "^5"
-  },
-  "browserslist": [
-    "chrome >= 126",
-    "firefox >= 127",
-    "opera >= 111",
-    "not dead",
-    "not op_mini all"
-  ],
-  "simple-git-hooks": {
-    "prepare-commit-msg": "node ./task5/.gitlint.config.js"
->>>>>>>>> Temporary merge branch 2
-  }
+	"name": "task5",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.9.1",
+		"next": "14.2.18",
+		"react": "18.3.1",
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.53.2",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^8",
+		"eslint-config-next": "15.0.3",
+		"postcss": "^8.4.49",
+		"sass": "^1.81.0",
+		"tailwindcss": "^3.4.15",
+		"typescript": "^5",
+		"simple-git-hooks": "^2.11.1"
+	},
+	"browserslist": [
+		"chrome >= 126",
+		"firefox >= 127",
+		"opera >= 111",
+		"not dead",
+		"not op_mini all"
+	],
+	"simple-git-hooks": {
+		"prepare-commit-msg": "node ./task5/.gitlint.config.js"
+	}
 }
