--- a/task5/.eslintrc.json
+++ b/task5/.eslintrc.json
@@ -1,3 +1,30 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": [
+    "next/core-web-vitals",
+    "next/typescript",
+    "eslint:recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript",
+    "plugin:auto-import/recommended"
+  ],
+  "rules": {
+    "auto-import/auto-import": [
+      "error",
+      {
+        "imports": ["react", "next/image"]
+      }
+    ],
+    "@typescript-eslint/no-require-imports": "off" // предупреждение о requare path
+  },
+  "import/order": [
+    "error",
+    {
+      "groups": [
+        ["builtin", "external"],
+        ["internal", "parent", "sibling", "index"]
+      ],
+      "newlines-between": "always"
+    }
+  ]
 }
