--- a/task5/package.json
+++ b/task5/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.1",
+		"@svgr/webpack": "^8.1.0",
 		"next": "14.2.18",
 		"react": "18.3.1",
 		"react-dom": "18.2.0",
@@ -23,11 +24,16 @@
 		"autoprefixer": "^10.4.20",
 		"eslint": "^8",
 		"eslint-config-next": "15.0.3",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-auto-import": "^0.1.1",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-prettier": "^5.2.1",
 		"postcss": "^8.4.49",
+		"prettier": "^3.4.1",
 		"sass": "^1.81.0",
+		"simple-git-hooks": "^2.11.1",
 		"tailwindcss": "^3.4.15",
-		"typescript": "^5",
-		"simple-git-hooks": "^2.11.1"
+		"typescript": "^5"
 	},
 	"browserslist": [
 		"chrome >= 126",
