--- a/task5/package.json
+++ b/task5/package.json
@@ -29,6 +29,7 @@
       "eslint-plugin-auto-import": "^0.1.1",
       "eslint-plugin-import": "^2.31.0",
       "eslint-plugin-prettier": "^5.2.1",
+      "next-images": "^1.8.5",
       "postcss": "^8.4.49",
       "postcss-nested": "^7.0.2",
       "prettier": "^3.4.1",
