--- a/task5/tsconfig.json
+++ b/task5/tsconfig.json
@@ -1,26 +1,27 @@
 {
 	"compilerOptions": {
-		"target": "ES2017",
-		"lib": ["dom", "dom.iterable", "esnext"],
-		"allowJs": true,
-		"skipLibCheck": true,
-		"strict": true,
-		"noEmit": true,
-		"esModuleInterop": true,
-		"module": "esnext",
-		"moduleResolution": "bundler",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"jsx": "preserve",
-		"incremental": true,
+      "target": "ES2017",
+      "lib": ["dom", "dom.iterable", "esnext"],
+      "allowJs": true,
+      "skipLibCheck": true,
+      "strict": true,
+      "noEmit": true,
+      "esModuleInterop": true,
+      "module": "esnext",
+      // "moduleResolution": "bundler",
+      "moduleResolution": "node",
+      "resolveJsonModule": true,
+      "isolatedModules": true,
+      "jsx": "preserve",
+      "incremental": true,
 
-		"baseUrl": ".",
-		"paths": {
-			"@/*": ["./src/*"],
-			"@public/*": ["./public/*"],
-			"@components/*": ["./src/components/*"]
-		}
-	},
+      "baseUrl": ".",
+      "paths": {
+         "@/*": ["./src/*"],
+         "@public/*": ["./public/*"],
+         "@components/*": ["./src/components/*"]
+      }
+   },
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js"],
 	"exclude": ["node_modules"]
 }
