--- a/task5/.prettierrc.json
+++ b/task5/.prettierrc.json
@@ -2,5 +2,6 @@
   "singleQuote": true,
   "semi": true,
   "tabWidth": 3,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "printWidth": 120
 }
