--- a/task5/package.json
+++ b/task5/package.json
@@ -14,6 +14,7 @@
       "@svgr/webpack": "^8.1.0",
       "next": "14.2.18",
       "react": "18.3.1",
+      "react-calendar": "^5.1.0",
       "react-dom": "18.2.0",
       "react-hook-form": "^7.53.2",
       "zod": "^3.23.8"
