--- a/task5/package.json
+++ b/task5/package.json
@@ -10,11 +10,16 @@
       "prettify": "prettier ./src/**/*.{ts,tsx} --write"
    },
    "dependencies": {
+      "@dnd-kit/core": "^6.2.0",
       "@hookform/resolvers": "^3.9.1",
       "@svgr/webpack": "^8.1.0",
+      "install": "^0.13.0",
       "next": "14.2.18",
+      "npm": "^10.9.1",
       "react": "18.3.1",
       "react-calendar": "^5.1.0",
+      "react-dnd": "^16.0.1",
+      "react-dnd-html5-backend": "^16.0.1",
       "react-dom": "18.2.0",
       "react-hook-form": "^7.53.2",
       "zod": "^3.23.8"
