--- a/task5/.prettierrc.json
+++ b/task5/.prettierrc.json
@@ -1,6 +1,7 @@
 {
   "singleQuote": true,
   "semi": true,
-  "tabWidth": 2,
-  "trailingComma": "es5"
+  "tabWidth": 3,
+  "trailingComma": "es5",
+  "printWidth": 120
 }
