--- a/task5/package.json
+++ b/task5/package.json
@@ -16,6 +16,7 @@
       "@reduxjs/toolkit": "^2.3.0",
       "@svgr/webpack": "^8.1.0",
       "date-fns": "^4.1.0",
+      "html-react-parser": "^5.1.19",
       "next": "14.2.18",
       "react": "18.3.1",
       "react-calendar": "^5.1.0",
