--- a/task5/package.json
+++ b/task5/package.json
@@ -25,6 +25,7 @@
       "react-dom": "18.2.0",
       "react-hook-form": "^7.53.2",
       "react-redux": "^9.1.2",
+      "react-scrollbars-custom": "^4.1.1",
       "zod": "^3.23.8"
    },
    "devDependencies": {
