--- a/task5/package.json
+++ b/task5/package.json
@@ -32,6 +32,7 @@
    "devDependencies": {
       "@types/node": "^20",
       "@types/react": "^18",
+      "@types/react-custom-scrollbars": "^4.0.13",
       "@types/react-dom": "^18",
       "autoprefixer": "^10.4.20",
       "eslint": "^8",
