--- a/task5/tsconfig.json
+++ b/task5/tsconfig.json
@@ -23,5 +23,5 @@
       }
    },
    "include": ["next-env.d.ts", "src/**/*", "**/*.ts", "**/*.tsx", "next.config.js"],
-   "exclude": ["node_modules"]
+   "exclude": ["node_modules", ".next", "**/*.test.ts", "**/*.spec.ts", "dist", ".vscode", "*.tmp"]
 }
