--- a/task5/.eslintrc.json
+++ b/task5/.eslintrc.json
@@ -15,9 +15,11 @@
    "plugins": ["@typescript-eslint", "module-resolver", "auto-import"],
 
    "parserOptions": {
-      "ecmaVersion": 2020,
-      "sourceType": "module",
-      "project": "./tsconfig.json"
+      "ecmaFeatures": {
+         "jsx": true
+      },
+      "ecmaVersion": 12,
+      "sourceType": "module"
    },
 
    "rules": {
