--- a/task5/package.json
+++ b/task5/package.json
@@ -8,7 +8,8 @@
       "start": "next start",
       "lint": "next lint",
       "gen-types": "npx swagger-typescript-api -p ../openapi.json -o ./src -n myApi.ts",
-      "prettify": "prettier ./src/**/*.{ts,tsx} --write"
+      "prettify": "prettier ./src/**/*.{ts,tsx} --write",
+      "analyze": "next build && next export && webpack-bundle-analyzer dist/static/*/*.js"
    },
    "dependencies": {
       "@dnd-kit/core": "^6.2.0",
@@ -46,7 +47,8 @@
       "sass": "^1.81.0",
       "simple-git-hooks": "^2.11.1",
       "tailwindcss": "^3.4.15",
-      "typescript": "^5"
+      "typescript": "^5",
+      "webpack-bundle-analyzer": "^4.10.2"
    },
    "browserslist": [
       "chrome >= 126",
