--- a/task5/package.json
+++ b/task5/package.json
@@ -32,7 +32,6 @@
    "devDependencies": {
       "@types/node": "^20",
       "@types/react": "^18",
-      "@types/react-custom-scrollbars": "^4.0.13",
       "@types/react-dom": "^18",
       "autoprefixer": "^10.4.20",
       "eslint": "^8",
@@ -47,9 +46,7 @@
       "prettier": "^3.4.1",
       "sass": "^1.81.0",
       "simple-git-hooks": "^2.11.1",
-      "tailwindcss": "^3.4.15",
-      "typescript": "^5",
-      "webpack-bundle-analyzer": "^4.10.2"
+      "typescript": "^5"
    },
    "browserslist": [
       "chrome >= 126",
